feat #30 : 챌린지 관련 에러 수정 및 Repository 간편화